[gd_scene load_steps=9 format=2]

[ext_resource path="res://Code/Credits.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Sky.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Audio/Start_Menu_Music.ogg" type="AudioStream" id=4]
[ext_resource path="res://Art/UI/Exit.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 3 )

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Sky" parent="." instance=ExtResource( 2 )]

[node name="Label" type="Label" parent="."]
margin_left = -450.0
margin_top = -10.0
margin_right = 402.0
margin_bottom = 2041.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Code




Art













Audio






Thanks for playing! :)"
align = 1

[node name="aZamBie" type="Button" parent="Label"]
margin_left = 236.0
margin_top = 82.0
margin_right = 613.0
margin_bottom = 164.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 0.882353, 0.882353, 0.882353, 1 )
enabled_focus_mode = 0
text = "aZamBie"
flat = true

[node name="Mario" type="Button" parent="Label"]
margin_left = 236.0
margin_top = 150.0
margin_right = 613.0
margin_bottom = 232.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 0.882353, 0.882353, 0.882353, 1 )
enabled_focus_mode = 0
text = "Mariothedog"
flat = true

[node name="vallemrv" type="Button" parent="Label"]
margin_left = 236.0
margin_top = 230.0
margin_right = 613.0
margin_bottom = 312.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 0.882353, 0.882353, 0.882353, 1 )
enabled_focus_mode = 0
text = "vallemrv"
flat = true

[node name="aZamBie2" type="Button" parent="Label"]
margin_left = 236.0
margin_top = 480.0
margin_right = 613.0
margin_bottom = 562.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 0.882353, 0.882353, 0.882353, 1 )
enabled_focus_mode = 0
text = "aZamBie"
flat = true

[node name="bakudas" type="Button" parent="Label"]
margin_left = 206.0
margin_top = 570.0
margin_right = 647.0
margin_bottom = 652.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 0.882353, 0.882353, 0.882353, 1 )
enabled_focus_mode = 0
text = "Tiles - bakudas"
flat = true

[node name="rvros" type="Button" parent="Label"]
margin_left = 206.0
margin_top = 670.0
margin_right = 647.0
margin_bottom = 752.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 0.882353, 0.882353, 0.882353, 1 )
enabled_focus_mode = 0
text = "Player - rvros"
flat = true

[node name="Puddin" type="Button" parent="Label"]
margin_left = 230.0
margin_top = 760.0
margin_right = 620.0
margin_bottom = 842.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 0.882353, 0.882353, 0.882353, 1 )
enabled_focus_mode = 0
text = "Coin - Puddin"
flat = true

[node name="kenney" type="Button" parent="Label"]
margin_left = 130.0
margin_top = 850.0
margin_right = 735.0
margin_bottom = 932.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 0.882353, 0.882353, 0.882353, 1 )
enabled_focus_mode = 0
text = "Jump Bar - kenney.nl"
flat = true

[node name="shinzohotoroki" type="Button" parent="Label"]
margin_left = 110.0
margin_top = 950.0
margin_right = 755.0
margin_bottom = 1032.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 0.882353, 0.882353, 0.882353, 1 )
enabled_focus_mode = 0
text = "Heart - shinzohotoroki"
flat = true

[node name="DaveB" type="Button" parent="Label"]
margin_left = -10.0
margin_top = 1050.0
margin_right = 923.0
margin_bottom = 1132.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 0.882353, 0.882353, 0.882353, 1 )
enabled_focus_mode = 0
text = "Heart Shatter Animation - DaveB"
flat = true

[node name="Iqdev" type="Button" parent="Label"]
margin_left = -6.0
margin_top = 1140.0
margin_right = 927.0
margin_bottom = 1222.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 0.882353, 0.882353, 0.882353, 1 )
enabled_focus_mode = 0
text = "Heart Appear Animation - Iqdev"
flat = true

[node name="Angelee" type="Button" parent="Label"]
margin_left = -10.0
margin_top = 1240.0
margin_right = 923.0
margin_bottom = 1322.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 0.882353, 0.882353, 0.882353, 1 )
enabled_focus_mode = 0
text = "Sign Box - Angelee"
flat = true

[node name="bevouliin" type="Button" parent="Label"]
margin_left = -20.0
margin_top = 1350.0
margin_right = 913.0
margin_bottom = 1432.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 0.882353, 0.882353, 0.882353, 1 )
enabled_focus_mode = 0
text = "Spikes - bevouliin"
flat = true

[node name="gerobakberkah" type="Button" parent="Label"]
margin_left = 206.0
margin_top = 1610.0
margin_right = 644.0
margin_bottom = 1692.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 0.882353, 0.882353, 0.882353, 1 )
enabled_focus_mode = 0
text = "gerobakberkah"
flat = true

[node name="cdrk" type="Button" parent="Label"]
margin_left = 96.0
margin_top = 1692.0
margin_right = 791.0
margin_bottom = 1774.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.494118, 0.494118, 0.494118, 1 )
custom_colors/font_color_pressed = Color( 0.882353, 0.882353, 0.882353, 1 )
enabled_focus_mode = 0
text = "Heart Shatter SFX - cdrk"
flat = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
autoplay = true

[node name="Tween" type="Tween" parent="."]

[node name="Exit_Button" type="Button" parent="."]
margin_left = 310.0
margin_top = -214.0
margin_right = 494.0
margin_bottom = -128.0
custom_fonts/font = SubResource( 3 )
flat = true

[node name="Button Sprite" type="Sprite" parent="Exit_Button"]
position = Vector2( 94.736, 36.5803 )
scale = Vector2( 0.578661, 0.871394 )
texture = ExtResource( 5 )

[connection signal="pressed" from="Label/aZamBie" to="." method="_on_aZamBie_pressed"]
[connection signal="pressed" from="Label/Mario" to="." method="_on_Mario_pressed"]
[connection signal="pressed" from="Label/vallemrv" to="." method="_on_vallemrv_pressed"]
[connection signal="pressed" from="Label/aZamBie2" to="." method="_on_aZamBie_pressed"]
[connection signal="pressed" from="Label/bakudas" to="." method="_on_bakudas_pressed"]
[connection signal="pressed" from="Label/rvros" to="." method="_on_rvros_pressed"]
[connection signal="pressed" from="Label/Puddin" to="." method="_on_Puddin_pressed"]
[connection signal="pressed" from="Label/kenney" to="." method="_on_kenney_pressed"]
[connection signal="pressed" from="Label/shinzohotoroki" to="." method="_on_shinzohotoroki_pressed"]
[connection signal="pressed" from="Label/DaveB" to="." method="_on_DaveB_pressed"]
[connection signal="pressed" from="Label/Iqdev" to="." method="_on_Iqdev_pressed"]
[connection signal="pressed" from="Label/Angelee" to="." method="_on_Angelee_pressed"]
[connection signal="pressed" from="Label/bevouliin" to="." method="_on_bevouliin_pressed"]
[connection signal="pressed" from="Label/gerobakberkah" to="." method="_on_gerobakberkah_pressed"]
[connection signal="pressed" from="Label/cdrk" to="." method="_on_cdrk_pressed"]
[connection signal="mouse_entered" from="Exit_Button" to="." method="_on_Exit_Button_mouse_entered"]
[connection signal="mouse_exited" from="Exit_Button" to="." method="_on_Exit_Button_mouse_exited"]
[connection signal="pressed" from="Exit_Button" to="." method="_on_Exit_Button_pressed"]
